First commit for PseudoHeaderGen.
This Clang-based tool mirrors a set of headers but writes declarations in a commentless "standard" form, so commenting a line is removing a declaration. Those pseudo-headers are meant to be used by another upcoming tool, PH2LLVMBitcode, that will generate LLVM bitcode files containing the declarations for OGRE, Bullet, cAudio, etc.'s classes and functions, but only the ones which are whitelisted in the pseudo-headers.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,15 @@
 cmake_minimum_required(VERSION 2.8)
 
+set(PATH_TO_LLVM_SOURCE "" CACHE PATH "Path to LLVM source code.")
+set(PATH_TO_LLVM_BUILD "" CACHE PATH "Path to the directory where LLVM was built.")
+
 project(Tales)
 
 add_subdirectory(src)
+
+option(BUILD_CLANG_TOOLS "Build Clang-based tools? Requires PATH_TO_LLVM_SOURCE and PATH_TO_LLVM_BUILD to be set." OFF)
+if (BUILD_CLANG_TOOLS)
+	add_subdirectory(tools/PseudoHeaderGen)
+endif()
 
 # install(TARGETS tales RUNTIME DESTINATION bin)
