Final(?) corrections to PseudoHeaderGen's output.
Removed constructor and struct's initializers.
Fixed terminators after deleted bodies of functions.
Grabbed the TypePrinter class and customized it to remove unnecessary
scope prefixes.
Changed SmallString<T, 256> to LLVM-like SmallString<128> (finally
learned what N is for).

The output is *almost* valid C++ now and as clean as possible. Almost
because the declarations are made with non-existing types, PH2Bitcode
will have to automatically forward declare any unknown type, but what
about class vs basic type alias?

Also removed TalesRuntime.c's workarounds.

--- a/tools/PseudoHeaderGen/CMakeLists.txt
+++ b/tools/PseudoHeaderGen/CMakeLists.txt
@@ -4,6 +4,7 @@
 
 # TODO: check if PATH_TO_LLVM_SOURCE is empty/correct
 add_custom_command(OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/TalesPseudoHeaderGen"
-	COMMAND env PATH_TO_LLVM_SOURCE="${PATH_TO_LLVM_SOURCE}" PATH_TO_LLVM_BUILD="${PATH_TO_LLVM_BUILD}" OUTPUT_DIR="${CMAKE_CURRENT_BINARY_DIR}" ${CMAKE_CURRENT_SOURCE_DIR}/build.sh)
+	COMMAND env PATH_TO_LLVM_SOURCE="${PATH_TO_LLVM_SOURCE}" PATH_TO_LLVM_BUILD="${PATH_TO_LLVM_BUILD}" OUTPUT_DIR="${CMAKE_CURRENT_BINARY_DIR}" ${CMAKE_CURRENT_SOURCE_DIR}/build.sh
+	DEPENDS PseudoHeaderGen.cpp DeclPrinter.hpp TypePrinter.hpp)
 
 add_custom_target(TalesPseudoHeaderGen DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/TalesPseudoHeaderGen")
