Gigacommit ‒ PH2BC whitelisting, PHG fixes, CMake-only build.
Here it is, after three weeks of hide-and-seek through the mazes of
Parse, Sema and CodeGen, bumping from one obscure segfault to a dozen
more obscure errors, having to wait for 10 minutes during each
compilation since the linker needed all my RAM.

So PH2BC finally works.
The AST is built as usual from a C++ file, then in a second pass the
pseudo-header (specified with -pseudoheader-whitelist) is parsed and
Sema whitelists the declarations to be emitted (after making sure it's
the same declaration, the trick was to reuse as much as Sema but not
let it create any declaration).
In order to wait for the whitelist pass all CodeGen calls are deferred
until the end of the parsing. Any forward function declaration or
static variable is also emitted, but after everything else because
their types might not be complete yet.
Finally the PH2BC file modifications were "updated" from the
LLVM/Clang master branch to the 3.3 branch, which makes it compatible
with the recent 3.3 final release of LLVM.

As for PHG:
Removed the protected and private parts of PHG's output, and removed
unneeded scope from template arguments (nth time the charm).
Fixed a minor bug in the original DeclPrinter (adding void to
destructors).
Fixed another bug printing incorrect typedef declarations with an
anonymous tag, at least for PHGen's case.
Space between two '>' required by pre-0x C++ added (yet another minor
bug in vanilla DeclPrinter).
Removed the return type from conversion operators, e.g ->Radian<-
operator class Ogre::Radian() (yaminbug).
Removed restrict qualifiers in extern "C" decls (ideally they should
be removed only for C++ translation units).

The build bash scripts were scrapped and swapped with a pure
CMake-based system that should work on every platform supported by
CMake.
Instead of copying/linking the modified files the build system now
generates patches that are applied to the LLVM source tree. This
blasts the chains of a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,30 +3,37 @@ cmake_minimum_required(VERSION 2.8)
 set(PATH_TO_LLVM_SOURCE "" CACHE PATH "Path to LLVM (with Clang) source code tree.")
 set(PATH_TO_LLVM_BUILD "" CACHE PATH "Path to the directory where LLVM and Clang were built with CMake.")
 
+# option(BUILD_CLANG_TOOLS "Build Clang-based tools (requires PATH_TO_LLVM_SOURCE and PATH_TO_LLVM_BUILD to be set)." OFF)
+option(RESTORE_LLVM_SOURCE "Restore the original LLVM source tree once Tales is built." OFF)
+
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
-# Prefer the specified LLVM copy to the system copy (can also saves from installing 5GB of files)
+# TODO: Building could be further simplified with an external_project configured with BuildType=Release in case the LLVM paths aren't set, but the user should choose this option willingly (with an option())
+# Further TODO: Maybe Tales' core could be built with a system copy, the only issue being TalesRuntime, which could come pre-built in the source code
+
+# Prefer the specified LLVM copy to the system copy (saves about 5GB if a system install isn't needed)
 if (EXISTS "${PATH_TO_LLVM_SOURCE}/lib/IRReader" AND EXISTS "${PATH_TO_LLVM_BUILD}/lib/IRReader/CMakeFiles")
 	message("Using the specified LLVM source tree instead of the system copy.")
 	list(APPEND CMAKE_PREFIX_PATH "${PATH_TO_LLVM_BUILD}")
 	list(APPEND CMAKE_MODULE_PATH "${PATH_TO_LLVM_BUILD}/share/llvm/cmake" "${PATH_TO_LLVM_SOURCE}/cmake/modules")
 
-	find_package(LLVM REQUIRED)
+	find_package(LLVM REQUIRED)  # FIXME: sure it's selecting the source tree instead of the system install?
 
 	# NOTE: LLVM should provide a better way to reuse a source folder
 	set(LLVM_INSTALL_PREFIX "${PATH_TO_LLVM_BUILD}")
 	set(LLVM_INCLUDE_DIRS "${PATH_TO_LLVM_SOURCE}/include" "${PATH_TO_LLVM_BUILD}/include")
 	set(LLVM_LIBRARY_DIRS "${LLVM_INSTALL_PREFIX}/lib")
 else()
-	find_package(LLVM REQUIRED)
+	message(FATAL_ERROR "A LLVM+Clang source code tree and a LLVM build directory are required to build Tales. The source tree will be patched, and LLVM built.\nLLVM doesn't need to be built before building Tales, but you have to configure the source tree for example with:\n	cmake ../llvm -D CMAKE_BUILD_TYPE=Release\nA Release build is recommended since the size of files skyrockets in Debug and RelWithDebInfo modes.")
 endif()
 
 project(Tales)
 
 add_subdirectory(src)
 
-# option(BUILD_CLANG_TOOLS "Build Clang-based tools (requires PATH_TO_LLVM_SOURCE and PATH_TO_LLVM_BUILD to be set)." OFF)
-set(BUILD_CLANG_TOOLS ON) # We need a modified Clang in all cases for TalesRuntime.c
+
+# We need a modified Clang in all cases for TalesRuntime.c
+set(BUILD_CLANG_TOOLS ON)
 
 if (BUILD_CLANG_TOOLS)
 	if (NOT EXISTS "${PATH_TO_LLVM_SOURCE}/lib/IRReader")
