LLVM-style RTTI, code reformat, groundwork for building fbb deps.
LLVM-style RTTI implemented, program-wide RTTI disabled.
Bisonc++'s skeletons were altered to use it and unique_ptr<> everywhere,
and some tricky issues were solved with a handle system.
I also tried to work with unique_ptr only instead of shared_ptr, which
might be possible but following assignments in TalesParser.cc was too
much for my brain to handle.
This was overall much harder than expected.

Other changes:

Exceptions disabled except for the parser and the lexer.
Complete reformatting of the code to avoid unreadable long lines.

Also I'm still wondering whether or not to offer building
icmake/bobcat/flexc++/bisonc++ with ExternalProject, it's already done
but commented out for bisonc++ and I haven't gone further since I
figured out that none of these are known to build on Visual Studio,
icmake even relies on a bash script, relatively simple though so it may
be easy to add a CMake build system.

--- a/tools/PH2Bitcode/CMakeLists.txt
+++ b/tools/PH2Bitcode/CMakeLists.txt
@@ -1,6 +1,13 @@
 # The new bash script-free build system should work on any system supported by CMake (diff.exe and patch.exe are required on Windows though), but watch out for the NOTE at the end of the file.
 # I won't be testing Tales on systems with CMAKE_BUILD_TOOL different from Make and Ninja for a long time, so some help would be needed to figure out the arguments to be passed to other build tools if there are any.
 
+include(FindPackageHandleStandardArgs)
+
+find_program(DIFF_EXECUTABLE diff)
+FIND_PACKAGE_HANDLE_STANDARD_ARGS(DIFF REQUIRED_VARS DIFF_EXECUTABLE)
+find_program(PATCH_EXECUTABLE patch)
+FIND_PACKAGE_HANDLE_STANDARD_ARGS(PATCH REQUIRED_VARS PATCH_EXECUTABLE)
+
 list(APPEND PH2BC_MODFILES
 	tools/clang/include/clang/AST/ASTConsumer.h
 	tools/clang/include/clang/Driver/CC1Options.td
@@ -75,7 +82,7 @@ foreach(MODFILE_LLVM IN LISTS PH2BC_MODFILES)
 	)
 
 	add_custom_command(OUTPUT "${PATH_TO_LLVM_SOURCE}/${MODFILE_LLVM}"
-		COMMAND patch --no-backup-if-mismatch
+		COMMAND ${PATCH_EXECUTABLE} --no-backup-if-mismatch
 			-o "${PATH_TO_LLVM_SOURCE}/${MODFILE_LLVM}"
 			"${PATH_TO_LLVM_SOURCE}/${MODFILE_LLVM}.orig"
 			"${CMAKE_CURRENT_BINARY_DIR}/patches/${MODFILE_BASENAME}.patch"
