--- a/tools/PH2Bitcode/patchgen.cmake.in
+++ b/tools/PH2Bitcode/patchgen.cmake.in
@@ -1,4 +1,4 @@
-execute_process(COMMAND diff -u
+execute_process(COMMAND @DIFF_EXECUTABLE@ -u
 		"@CMAKE_CURRENT_SOURCE_DIR@/@MODFILE_ORIG@"
 		"@CMAKE_CURRENT_SOURCE_DIR@/@MODFILE@"
 	OUTPUT_FILE "@CMAKE_CURRENT_BINARY_DIR@/patches/@MODFILE_BASENAME@.patch"
