--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,12 +17,15 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 # being TalesRuntime, which could come pre-built in the source code.
 
 # Prefer the specified LLVM copy to the system copy (saves about 5GB if a system install isn't needed)
-if (EXISTS "${PATH_TO_LLVM_SOURCE}/lib/IRReader" AND EXISTS "${PATH_TO_LLVM_BUILD}/lib/IRReader/CMakeFiles")
+if (EXISTS "${PATH_TO_LLVM_SOURCE}/lib/IRReader" AND
+		EXISTS "${PATH_TO_LLVM_BUILD}/lib/IRReader/CMakeFiles")
 	message("Using the specified LLVM source tree instead of the system copy.")
 	list(APPEND CMAKE_PREFIX_PATH "${PATH_TO_LLVM_BUILD}")
-	list(APPEND CMAKE_MODULE_PATH "${PATH_TO_LLVM_BUILD}/share/llvm/cmake" "${PATH_TO_LLVM_SOURCE}/cmake/modules")
+	list(APPEND CMAKE_MODULE_PATH "${PATH_TO_LLVM_BUILD}/share/llvm/cmake"
+		"${PATH_TO_LLVM_SOURCE}/cmake/modules")
 
-	find_package(LLVM REQUIRED)  # FIXME: sure it's selecting the source tree instead of the system install?
+	find_package(LLVM REQUIRED)  # FIXME: sure it's selecting the source tree
+		# instead of the system install?
 
 	# NOTE: LLVM should provide a better way to reuse a source folder
 	set(LLVM_INSTALL_PREFIX "${PATH_TO_LLVM_BUILD}")
